force-app/main/default/objects/Swag_Item__c/Swag_Item__c.object-meta.xml
<CustomObject>
    <label>Swag Item</label>
    <nameField>
        <displayFormat>SIN{0000}</displayFormat>
        <label>Swag Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swag Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>