force-app/main/default/objects/Swag_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sweatshirt</fullName>
            </value>
            <value>
                <fullName>TShirt</fullName>
            </value>
            <value>
                <fullName>Hat</fullName>
            </value>
            <value>
                <fullName>Gloves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>