force-app/main/default/objects/Swag_Item__c/fields/Swag_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Swag_Delivery__c</fullName>
    <label>Swag Delivery</label>
    <referenceTo>Swag_Delivery__c</referenceTo>
    <relationshipLabel>Swag Items</relationshipLabel>
    <relationshipName>Swag_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>